[gd_scene load_steps=5 format=3 uid="uid://cmgxsceamj3q0"]

[ext_resource type="Script" path="res://hud.gd" id="1_3o122"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6h55"]
bg_color = Color(0.814182, 0.0958833, 1.92523e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvmcw"]
bg_color = Color(0, 0.725277, 0.206418, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0xqv5"]
font_size = 50
font_color = Color(0.781311, 0, 0.177141, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3o122")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 53.0
offset_top = -30.0
offset_right = 148.0
offset_bottom = 13.0
grow_vertical = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer1" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer1"]
layout_mode = 2
text = "Ammo:"

[node name="ammo" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
text = " "

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -253.0
offset_right = 55.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_o6h55")
theme_override_styles/fill = SubResource("StyleBoxFlat_kvmcw")
value = 100.0
fill_mode = 3

[node name="YouDied" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "You Died"
label_settings = SubResource("LabelSettings_0xqv5")

[node name="InteractOption" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 33.0
offset_right = 70.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
text = "Press F to Interact"
